<resources>
    <string name="sample">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eget faucibus risus. In hac habitasse platea dictumst. Fusce dignissim sem suscipit fermentum consectetur.</string>
    <string name="basicsHeader">INSURANCE BASICS</string>
    <string name="who">Who needs insurance?</string>
    <string name="app_name">guardifySG</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gender">Gender</string>
    <string name="age_group">Age Group</string>
    <string name="budget">Budget (per year)</string>
    <string name="existing_insurance_you_own">Existing Insurance You Own</string>
    <string name="life_insurance">Critical Illness Insurance</string>
    <string name="disability_insurance">Disability Insurance</string>
    <string name="integrated_shield_plan">Integrated Shield Plan</string>
    <string name="accident_insurance">Accident Insurance</string>
    <string name="type_of_coverage_required">Type Of Coverage Required</string>
    <string name="how_long_are_you_looking_to_cover">How long are you looking to cover?</string>
    <string name="monthly_expenditure_estimate">Monthly Expenditure Estimate</string>
    <string name="submit">Submit</string>
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
        <item>Prefer not to say</item>
    </string-array>
    <string-array name="age_array">
        <item>0 to 19</item>
        <item>20 to 24</item>
        <item>25 to 29</item>
        <item>30 to 34</item>
        <item>35 to 39</item>
        <item>40 to 44</item>
        <item>45 to 49</item>
        <item>50 to 54</item>
        <item>55 to 59</item>
        <item>60 to 64</item>
        <item>65 to 69</item>
        <item>70 and older</item>
        <item>Prefer not to say</item>
    </string-array>
    <string-array name="budget_array">
        <item>$0 to $100</item>
        <item>$101 to $150</item>
        <item>$151 to $200</item>
        <item>$201 to $250</item>
        <item>$251 and above</item>
        <item>Prefer not to say</item>
    </string-array>
    <string-array name="coverage_array">
        <item>Cover for Hospital Bills</item>
        <item>Cover for Accidents</item>
        <item>Cover for Critical Illness</item>
        <item>Cover for Disability</item>
        <item>Prefer not to say</item>
    </string-array>
    <string-array name="term_array">
        <item>Up to age 65</item>
        <item>Up to age 85</item>
        <item>Life Time Coverage</item>
        <item>Prefer not to say</item>
    </string-array>
    <string-array name="expense_array">
        <item>$0 to $500</item>
        <item>$501 to $1,000</item>
        <item>$1,001 to $1,500</item>
        <item>$1,501 and above</item>
        <item>Prefer not to say</item>
    </string-array>
    <string-array name="aboutus_array">
        <item>Inquiry</item>
        <item>Quote</item>
        <item>Feedback</item>
        <item>Other</item>
        <item>Prefer not to say</item>
    </string-array>
    <string name="questionnaireText">FIND YOUR SUITABLE POLICIES!</string>
    <string name="latestNews">THE LATEST NEWS</string>
    <string name="newsTitle">NEW COVID-19 POLICIES</string>
    <string name="newsDesc">MULTIPLE INSURANCE COMPANIES NOW OFFER COVERAGE FOR HOSPITALISATION DUE TO COVID-19</string>
    <string name="artTitle1">MAS reprimands AIA, Prudential and Aviva for breaching regulatory requirements</string>
    <string name="artShortDesc1">Insurance companies Aviva, AIA and Prudential have been found by the Monetary Authority of Singapore (MAS) to have breached regulations by not reviewing the performance of their supervisors and for paying them beyond the limit set by regulations.</string>
    <string name="artLongDesc1">MAS in a release on Tuesday (June 15) said that the companies have been reprimanded for the offences that happened between
        2017 and 2019. MAS has serious concerns regarding the misconduct and the financial institutions, and individuals are required to remediate the issues
        promptly.The Monetary Authority of Singapore (MAS) found that three insurance companies did not review the performance of their supervisors. The
        firms also failed to assign the supervisors a grade as required under regulations. They paid commissions to these supervisors that exceeded the
        stipulated cap as well. The central bank has reprimanded these companies and two other individuals for the breaches. MAS has also directed Aviva
        Financial Advisers to appoint independent persons to conduct a review of its internal control processes </string>
    <string name="artTitle2">NTUC Income reimagines insurance to give control back to customers</string>
    <string name="artShortDesc2">The company(NTUC Income) introduced Singapore’s first rain insurance, Droplet, which protects customers against price surges on ride-hailing platforms during rainy days</string>
    <string name="artLongDesc2">As an insurtech player, Income has launched groundbreaking products that have enriched customers’ insurance experience. For instance, the company introduced Singapore’s first rain insurance,
        Droplet, which protects customers against price surges on ride-hailing platforms during rainy days by reimbursing 60 per cent of fares so that commuters could confidently hail rides. In support of the Singapore
        Green Plan 2030, Income recently partnered with car marketplace Carro, integrating the latter’s telematics capabilities and its dynamic pricing technology to launch Covered, a usage-based model where electric car
        drivers pay for motor insurance according to the mileage they drove. Income aims to insure all eligible electric vehicles to promote the adoption of green cars in the island-state.</string>
    <string name="artTitle3">Great Eastern offers complimentary COVID-19 protection coverage for all Singapore residents</string>
    <string name="artShortDesc3">Leading insurer Great Eastern is continuing its efforts to protect the community and support the national phased recovery with the launch of the GREAT Covid Care Plan, a complimentary post-vaccination protection plan available to all Singapore residents</string>
    <string name="artLongDesc3">The GREAT Covid Care Plan provides a cash payout of S$200 per day of hospitalisation up to a total of $2,000, in the event one is hospitalised due to COVID-19 after their vaccination. The plan provides worldwide coverage so that hospitalisation in Singapore as well as overseas is covered. This will provide additional peace of mind for Singaporeans who may travel abroad for work or leisure, and for overseas residents returning to their home country for visits as countries start to open up.
        This free coverage applies to any Singapore resident who has completed his/her first dose of a COVID-19 vaccine2 approved for use by the Health Sciences Authority or supplied under the Special Access Route (SAR). Coverage also includes children who have been vaccinated. Parents may register on behalf of their children who are under 18.
        Registration on Great Eastern’s website is required to activate the free coverage, and all eligible recipients will receive their GREAT Covid Care insurance certificate via email once their sign up is confirmed. The plan provides coverage for 12 months from the date of registration or when the individual receives his/her first dose of COVID-19 vaccine, whichever is later. The sign up period ends on 30 September 2021 and applicants must also complete their first vaccination dose by 31 December 2021 to qualify for the coverage.
        The GREAT Covid Care Plan complements the coverage provided by the S$1 million GREAT Vaccine Fund launched in January 2021 and is the latest support measure that Great Eastern has rolled out with the progression of the COVID-19 vaccination programme in Singapore.
        More information on the GREAT Covid Care Plan can be found on Great Eastern’s website. The company will also be reaching out to its customers through its financial representatives.</string>
    <string name="artTitle4">As borders begin to open, NTUC Income adds Covid-19 coverage to travel insurance</string>
    <string name="artShortDesc4">SINGAPORE — Customers who buy travel insurance from NTUC Income will now receive coverage for Covid-19 medical expenses while overseas, the insurer announced on Thursday (Nov 26).</string>
    <string name="artLongDesc4">The Covid-19 benefits are automatically included in single trip travel insurance plans purchased from Thursday and are also included in plans that cover pre-existing conditions. They apply to trips with travel dates starting from Thursday.
        Travellers who have bought the plan will be protected for 90 days for Covid-19-related hospitalisation expenses of up to US$100,000 while overseas, as well as costs incurred for medical evacuation or repatriation of up to US$100,000, if that becomes necessary.
        NTUC Income said in a press release that it has decided to enhance its travel insurance offerings “in response to the gradual lifting of border restrictions in Singapore and other parts of the world”.
        These Covid-19 benefits, however, will be excluded from travel insurance for trips to countries that the World Health Organization deems as high-risk for Covid-19 at the point of purchase, NTUC Income said.
        Mr Fabian Ng, NTUC Income’s general manager for consumer business, said: “While overseas travel in general continues to be restricted, we understand that there are some who will need to travel for necessary business-related and other essential matters.</string>
    <string name="artTitle5">Subscription-based Netflix-style insurance launched by NTUC Income</string>
    <string name="artShortDesc5">SINGAPORE - Customers of streaming service Netflix are familiar with the concept of paying around $10 a month for a subscription plan that can be changed at any time.</string>
</resources>